tutorials/write-you-a-haskell/gen/StlcParser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.2 from tutorials/write-you-a-haskell/gen/StlcParser.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseStlc -> Stlc__top                      (0)
	Stlc__top -> Stlc rtk__eof                         (1)
	Stlc -> tok_Stlc_dummy_3 Stlc tok_Stlc_dummy_3     (2)
	Stlc -> tok_Expr_dummy_2 Expr tok_Expr_dummy_2     (3)
	Stlc -> tok_Id_dummy_1 Id tok_Id_dummy_1           (4)
	Stlc -> tok_Ty_dummy_0 Ty tok_Ty_dummy_0           (5)
	Stlc -> qq_Stlc                                    (6)
	Stlc -> Expr                                       (7)
	Atom -> qq_Expr                                    (8)
	Atom -> num                                        (9)
	Atom -> tok_true_13                                (10)
	Atom -> tok_false_14                               (11)
	Atom -> Id                                         (12)
	Atom -> tok__lparen__15 Expr tok__rparen__16       (13)
	App -> App Atom                                    (14)
	App -> Atom                                        (15)
	Mul -> Mul tok__star__12 App                       (16)
	Mul -> App                                         (17)
	Add -> Add tok__plus__10 Mul                       (18)
	Add -> Add tok__minus__11 Mul                      (19)
	Add -> Mul                                         (20)
	Eq -> Eq tok__eql__eql__9 Add                      (21)
	Eq -> Add                                          (22)
	Expr -> tok__symbol__0 Id tok__colon__1 Ty tok__dot__2 Expr   (23)
	Expr -> tok_let_3 Id tok__eql__4 Expr tok_in_5 Expr   (24)
	Expr -> tok_if_6 Expr tok_then_7 Expr tok_else_8 Expr   (25)
	Expr -> Eq                                         (26)
	Id -> qq_Id                                        (27)
	Id -> id                                           (28)
	TyAtom -> qq_Ty                                    (29)
	TyAtom -> tok_Int_18                               (30)
	TyAtom -> tok_Bool_19                              (31)
	TyAtom -> tok__lparen__15 Ty tok__rparen__16       (32)
	Ty -> TyAtom tok__minus__symbol__17 Ty             (33)
	Ty -> TyAtom                                       (34)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	rtk__eof       { L.PosToken _ L.EndOfFile }
	tok_Expr_dummy_2{ L.PosToken _ L.Tk__tok_Expr_dummy_2 }
	tok_Id_dummy_1 { L.PosToken _ L.Tk__tok_Id_dummy_1 }
	tok_Stlc_dummy_3{ L.PosToken _ L.Tk__tok_Stlc_dummy_3 }
	tok_Ty_dummy_0 { L.PosToken _ L.Tk__tok_Ty_dummy_0 }
	tok_true_13    { L.PosToken _ L.Tk__tok_true_13 }
	tok_then_7     { L.PosToken _ L.Tk__tok_then_7 }
	tok_let_3      { L.PosToken _ L.Tk__tok_let_3 }
	tok_in_5       { L.PosToken _ L.Tk__tok_in_5 }
	tok_if_6       { L.PosToken _ L.Tk__tok_if_6 }
	tok_false_14   { L.PosToken _ L.Tk__tok_false_14 }
	tok_else_8     { L.PosToken _ L.Tk__tok_else_8 }
	tok__symbol__0 { L.PosToken _ L.Tk__tok__symbol__0 }
	tok_Int_18     { L.PosToken _ L.Tk__tok_Int_18 }
	tok_Bool_19    { L.PosToken _ L.Tk__tok_Bool_19 }
	tok__eql__eql__9{ L.PosToken _ L.Tk__tok__eql__eql__9 }
	tok__eql__4    { L.PosToken _ L.Tk__tok__eql__4 }
	tok__colon__1  { L.PosToken _ L.Tk__tok__colon__1 }
	tok__dot__2    { L.PosToken _ L.Tk__tok__dot__2 }
	tok__minus__symbol__17{ L.PosToken _ L.Tk__tok__minus__symbol__17 }
	tok__minus__11 { L.PosToken _ L.Tk__tok__minus__11 }
	tok__plus__10  { L.PosToken _ L.Tk__tok__plus__10 }
	tok__star__12  { L.PosToken _ L.Tk__tok__star__12 }
	tok__rparen__16{ L.PosToken _ L.Tk__tok__rparen__16 }
	tok__lparen__15{ L.PosToken _ L.Tk__tok__lparen__15 }
	id             { L.PosToken _ (L.Tk__id _) }
	num            { L.PosToken _ (L.Tk__num _) }
	qq_Id          { L.PosToken _ (L.Tk__qq_Id _) }
	qq_Ty          { L.PosToken _ (L.Tk__qq_Ty _) }
	qq_Expr        { L.PosToken _ (L.Tk__qq_Expr _) }
	qq_Stlc        { L.PosToken _ (L.Tk__qq_Stlc _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseStlc rule  0
	Stlc__top       rule  1
	Stlc            rules 2, 3, 4, 5, 6, 7
	Atom            rules 8, 9, 10, 11, 12, 13
	App             rules 14, 15
	Mul             rules 16, 17
	Add             rules 18, 19, 20
	Eq              rules 21, 22
	Expr            rules 23, 24, 25, 26
	Id              rules 27, 28
	TyAtom          rules 29, 30, 31, 32
	Ty              rules 33, 34

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseStlc -> . Stlc__top                     (rule 0)

	tok_Expr_dummy_2shift, and enter state 10
	tok_Id_dummy_1 shift, and enter state 11
	tok_Stlc_dummy_3shift, and enter state 12
	tok_Ty_dummy_0 shift, and enter state 13
	tok_true_13    shift, and enter state 14
	tok_let_3      shift, and enter state 15
	tok_if_6       shift, and enter state 16
	tok_false_14   shift, and enter state 17
	tok__symbol__0 shift, and enter state 18
	tok__lparen__15shift, and enter state 19
	id             shift, and enter state 20
	num            shift, and enter state 21
	qq_Id          shift, and enter state 22
	qq_Expr        shift, and enter state 23
	qq_Stlc        shift, and enter state 24

	Stlc__top      goto state 25
	Stlc           goto state 2
	Atom           goto state 3
	App            goto state 4
	Mul            goto state 5
	Add            goto state 6
	Eq             goto state 7
	Expr           goto state 8
	Id             goto state 9

State 1

	Stlc__top -> . Stlc rtk__eof                        (rule 1)

	tok_Expr_dummy_2shift, and enter state 10
	tok_Id_dummy_1 shift, and enter state 11
	tok_Stlc_dummy_3shift, and enter state 12
	tok_Ty_dummy_0 shift, and enter state 13
	tok_true_13    shift, and enter state 14
	tok_let_3      shift, and enter state 15
	tok_if_6       shift, and enter state 16
	tok_false_14   shift, and enter state 17
	tok__symbol__0 shift, and enter state 18
	tok__lparen__15shift, and enter state 19
	id             shift, and enter state 20
	num            shift, and enter state 21
	qq_Id          shift, and enter state 22
	qq_Expr        shift, and enter state 23
	qq_Stlc        shift, and enter state 24

	Stlc           goto state 2
	Atom           goto state 3
	App            goto state 4
	Mul            goto state 5
	Add            goto state 6
	Eq             goto state 7
	Expr           goto state 8
	Id             goto state 9

State 2

	Stlc__top -> Stlc . rtk__eof                        (rule 1)

	rtk__eof       shift, and enter state 44


State 3

	App -> Atom .                                       (rule 15)

	rtk__eof       reduce using rule 15
	tok_Expr_dummy_2reduce using rule 15
	tok_Stlc_dummy_3reduce using rule 15
	tok_true_13    reduce using rule 15
	tok_then_7     reduce using rule 15
	tok_in_5       reduce using rule 15
	tok_false_14   reduce using rule 15
	tok_else_8     reduce using rule 15
	tok__eql__eql__9reduce using rule 15
	tok__minus__11 reduce using rule 15
	tok__plus__10  reduce using rule 15
	tok__star__12  reduce using rule 15
	tok__rparen__16reduce using rule 15
	tok__lparen__15reduce using rule 15
	id             reduce using rule 15
	num            reduce using rule 15
	qq_Id          reduce using rule 15
	qq_Expr        reduce using rule 15


State 4

	App -> App . Atom                                   (rule 14)
	Mul -> App .                                        (rule 17)

	rtk__eof       reduce using rule 17
	tok_Expr_dummy_2reduce using rule 17
	tok_Stlc_dummy_3reduce using rule 17
	tok_true_13    shift, and enter state 14
	tok_then_7     reduce using rule 17
	tok_in_5       reduce using rule 17
	tok_false_14   shift, and enter state 17
	tok_else_8     reduce using rule 17
	tok__eql__eql__9reduce using rule 17
	tok__minus__11 reduce using rule 17
	tok__plus__10  reduce using rule 17
	tok__star__12  reduce using rule 17
	tok__rparen__16reduce using rule 17
	tok__lparen__15shift, and enter state 19
	id             shift, and enter state 20
	num            shift, and enter state 21
	qq_Id          shift, and enter state 22
	qq_Expr        shift, and enter state 23

	Atom           goto state 43
	Id             goto state 9

State 5

	Mul -> Mul . tok__star__12 App                      (rule 16)
	Add -> Mul .                                        (rule 20)

	rtk__eof       reduce using rule 20
	tok_Expr_dummy_2reduce using rule 20
	tok_Stlc_dummy_3reduce using rule 20
	tok_then_7     reduce using rule 20
	tok_in_5       reduce using rule 20
	tok_else_8     reduce using rule 20
	tok__eql__eql__9reduce using rule 20
	tok__minus__11 reduce using rule 20
	tok__plus__10  reduce using rule 20
	tok__star__12  shift, and enter state 42
	tok__rparen__16reduce using rule 20


State 6

	Add -> Add . tok__plus__10 Mul                      (rule 18)
	Add -> Add . tok__minus__11 Mul                     (rule 19)
	Eq -> Add .                                         (rule 22)

	rtk__eof       reduce using rule 22
	tok_Expr_dummy_2reduce using rule 22
	tok_Stlc_dummy_3reduce using rule 22
	tok_then_7     reduce using rule 22
	tok_in_5       reduce using rule 22
	tok_else_8     reduce using rule 22
	tok__eql__eql__9reduce using rule 22
	tok__minus__11 shift, and enter state 40
	tok__plus__10  shift, and enter state 41
	tok__rparen__16reduce using rule 22


State 7

	Eq -> Eq . tok__eql__eql__9 Add                     (rule 21)
	Expr -> Eq .                                        (rule 26)

	rtk__eof       reduce using rule 26
	tok_Expr_dummy_2reduce using rule 26
	tok_Stlc_dummy_3reduce using rule 26
	tok_then_7     reduce using rule 26
	tok_in_5       reduce using rule 26
	tok_else_8     reduce using rule 26
	tok__eql__eql__9shift, and enter state 39
	tok__rparen__16reduce using rule 26


State 8

	Stlc -> Expr .                                      (rule 7)

	rtk__eof       reduce using rule 7
	tok_Stlc_dummy_3reduce using rule 7


State 9

	Atom -> Id .                                        (rule 12)

	rtk__eof       reduce using rule 12
	tok_Expr_dummy_2reduce using rule 12
	tok_Stlc_dummy_3reduce using rule 12
	tok_true_13    reduce using rule 12
	tok_then_7     reduce using rule 12
	tok_in_5       reduce using rule 12
	tok_false_14   reduce using rule 12
	tok_else_8     reduce using rule 12
	tok__eql__eql__9reduce using rule 12
	tok__minus__11 reduce using rule 12
	tok__plus__10  reduce using rule 12
	tok__star__12  reduce using rule 12
	tok__rparen__16reduce using rule 12
	tok__lparen__15reduce using rule 12
	id             reduce using rule 12
	num            reduce using rule 12
	qq_Id          reduce using rule 12
	qq_Expr        reduce using rule 12


State 10

	Stlc -> tok_Expr_dummy_2 . Expr tok_Expr_dummy_2    (rule 3)

	tok_true_13    shift, and enter state 14
	tok_let_3      shift, and enter state 15
	tok_if_6       shift, and enter state 16
	tok_false_14   shift, and enter state 17
	tok__symbol__0 shift, and enter state 18
	tok__lparen__15shift, and enter state 19
	id             shift, and enter state 20
	num            shift, and enter state 21
	qq_Id          shift, and enter state 22
	qq_Expr        shift, and enter state 23

	Atom           goto state 3
	App            goto state 4
	Mul            goto state 5
	Add            goto state 6
	Eq             goto state 7
	Expr           goto state 38
	Id             goto state 9

State 11

	Stlc -> tok_Id_dummy_1 . Id tok_Id_dummy_1          (rule 4)

	id             shift, and enter state 20
	qq_Id          shift, and enter state 22

	Id             goto state 37

State 12

	Stlc -> tok_Stlc_dummy_3 . Stlc tok_Stlc_dummy_3    (rule 2)

	tok_Expr_dummy_2shift, and enter state 10
	tok_Id_dummy_1 shift, and enter state 11
	tok_Stlc_dummy_3shift, and enter state 12
	tok_Ty_dummy_0 shift, and enter state 13
	tok_true_13    shift, and enter state 14
	tok_let_3      shift, and enter state 15
	tok_if_6       shift, and enter state 16
	tok_false_14   shift, and enter state 17
	tok__symbol__0 shift, and enter state 18
	tok__lparen__15shift, and enter state 19
	id             shift, and enter state 20
	num            shift, and enter state 21
	qq_Id          shift, and enter state 22
	qq_Expr        shift, and enter state 23
	qq_Stlc        shift, and enter state 24

	Stlc           goto state 36
	Atom           goto state 3
	App            goto state 4
	Mul            goto state 5
	Add            goto state 6
	Eq             goto state 7
	Expr           goto state 8
	Id             goto state 9

State 13

	Stlc -> tok_Ty_dummy_0 . Ty tok_Ty_dummy_0          (rule 5)

	tok_Int_18     shift, and enter state 32
	tok_Bool_19    shift, and enter state 33
	tok__lparen__15shift, and enter state 34
	qq_Ty          shift, and enter state 35

	TyAtom         goto state 30
	Ty             goto state 31

State 14

	Atom -> tok_true_13 .                               (rule 10)

	rtk__eof       reduce using rule 10
	tok_Expr_dummy_2reduce using rule 10
	tok_Stlc_dummy_3reduce using rule 10
	tok_true_13    reduce using rule 10
	tok_then_7     reduce using rule 10
	tok_in_5       reduce using rule 10
	tok_false_14   reduce using rule 10
	tok_else_8     reduce using rule 10
	tok__eql__eql__9reduce using rule 10
	tok__minus__11 reduce using rule 10
	tok__plus__10  reduce using rule 10
	tok__star__12  reduce using rule 10
	tok__rparen__16reduce using rule 10
	tok__lparen__15reduce using rule 10
	id             reduce using rule 10
	num            reduce using rule 10
	qq_Id          reduce using rule 10
	qq_Expr        reduce using rule 10


State 15

	Expr -> tok_let_3 . Id tok__eql__4 Expr tok_in_5 Expr    (rule 24)

	id             shift, and enter state 20
	qq_Id          shift, and enter state 22

	Id             goto state 29

State 16

	Expr -> tok_if_6 . Expr tok_then_7 Expr tok_else_8 Expr    (rule 25)

	tok_true_13    shift, and enter state 14
	tok_let_3      shift, and enter state 15
	tok_if_6       shift, and enter state 16
	tok_false_14   shift, and enter state 17
	tok__symbol__0 shift, and enter state 18
	tok__lparen__15shift, and enter state 19
	id             shift, and enter state 20
	num            shift, and enter state 21
	qq_Id          shift, and enter state 22
	qq_Expr        shift, and enter state 23

	Atom           goto state 3
	App            goto state 4
	Mul            goto state 5
	Add            goto state 6
	Eq             goto state 7
	Expr           goto state 28
	Id             goto state 9

State 17

	Atom -> tok_false_14 .                              (rule 11)

	rtk__eof       reduce using rule 11
	tok_Expr_dummy_2reduce using rule 11
	tok_Stlc_dummy_3reduce using rule 11
	tok_true_13    reduce using rule 11
	tok_then_7     reduce using rule 11
	tok_in_5       reduce using rule 11
	tok_false_14   reduce using rule 11
	tok_else_8     reduce using rule 11
	tok__eql__eql__9reduce using rule 11
	tok__minus__11 reduce using rule 11
	tok__plus__10  reduce using rule 11
	tok__star__12  reduce using rule 11
	tok__rparen__16reduce using rule 11
	tok__lparen__15reduce using rule 11
	id             reduce using rule 11
	num            reduce using rule 11
	qq_Id          reduce using rule 11
	qq_Expr        reduce using rule 11


State 18

	Expr -> tok__symbol__0 . Id tok__colon__1 Ty tok__dot__2 Expr    (rule 23)

	id             shift, and enter state 20
	qq_Id          shift, and enter state 22

	Id             goto state 27

State 19

	Atom -> tok__lparen__15 . Expr tok__rparen__16      (rule 13)

	tok_true_13    shift, and enter state 14
	tok_let_3      shift, and enter state 15
	tok_if_6       shift, and enter state 16
	tok_false_14   shift, and enter state 17
	tok__symbol__0 shift, and enter state 18
	tok__lparen__15shift, and enter state 19
	id             shift, and enter state 20
	num            shift, and enter state 21
	qq_Id          shift, and enter state 22
	qq_Expr        shift, and enter state 23

	Atom           goto state 3
	App            goto state 4
	Mul            goto state 5
	Add            goto state 6
	Eq             goto state 7
	Expr           goto state 26
	Id             goto state 9

State 20

	Id -> id .                                          (rule 28)

	rtk__eof       reduce using rule 28
	tok_Expr_dummy_2reduce using rule 28
	tok_Id_dummy_1 reduce using rule 28
	tok_Stlc_dummy_3reduce using rule 28
	tok_true_13    reduce using rule 28
	tok_then_7     reduce using rule 28
	tok_in_5       reduce using rule 28
	tok_false_14   reduce using rule 28
	tok_else_8     reduce using rule 28
	tok__eql__eql__9reduce using rule 28
	tok__eql__4    reduce using rule 28
	tok__colon__1  reduce using rule 28
	tok__minus__11 reduce using rule 28
	tok__plus__10  reduce using rule 28
	tok__star__12  reduce using rule 28
	tok__rparen__16reduce using rule 28
	tok__lparen__15reduce using rule 28
	id             reduce using rule 28
	num            reduce using rule 28
	qq_Id          reduce using rule 28
	qq_Expr        reduce using rule 28


State 21

	Atom -> num .                                       (rule 9)

	rtk__eof       reduce using rule 9
	tok_Expr_dummy_2reduce using rule 9
	tok_Stlc_dummy_3reduce using rule 9
	tok_true_13    reduce using rule 9
	tok_then_7     reduce using rule 9
	tok_in_5       reduce using rule 9
	tok_false_14   reduce using rule 9
	tok_else_8     reduce using rule 9
	tok__eql__eql__9reduce using rule 9
	tok__minus__11 reduce using rule 9
	tok__plus__10  reduce using rule 9
	tok__star__12  reduce using rule 9
	tok__rparen__16reduce using rule 9
	tok__lparen__15reduce using rule 9
	id             reduce using rule 9
	num            reduce using rule 9
	qq_Id          reduce using rule 9
	qq_Expr        reduce using rule 9


State 22

	Id -> qq_Id .                                       (rule 27)

	rtk__eof       reduce using rule 27
	tok_Expr_dummy_2reduce using rule 27
	tok_Id_dummy_1 reduce using rule 27
	tok_Stlc_dummy_3reduce using rule 27
	tok_true_13    reduce using rule 27
	tok_then_7     reduce using rule 27
	tok_in_5       reduce using rule 27
	tok_false_14   reduce using rule 27
	tok_else_8     reduce using rule 27
	tok__eql__eql__9reduce using rule 27
	tok__eql__4    reduce using rule 27
	tok__colon__1  reduce using rule 27
	tok__minus__11 reduce using rule 27
	tok__plus__10  reduce using rule 27
	tok__star__12  reduce using rule 27
	tok__rparen__16reduce using rule 27
	tok__lparen__15reduce using rule 27
	id             reduce using rule 27
	num            reduce using rule 27
	qq_Id          reduce using rule 27
	qq_Expr        reduce using rule 27


State 23

	Atom -> qq_Expr .                                   (rule 8)

	rtk__eof       reduce using rule 8
	tok_Expr_dummy_2reduce using rule 8
	tok_Stlc_dummy_3reduce using rule 8
	tok_true_13    reduce using rule 8
	tok_then_7     reduce using rule 8
	tok_in_5       reduce using rule 8
	tok_false_14   reduce using rule 8
	tok_else_8     reduce using rule 8
	tok__eql__eql__9reduce using rule 8
	tok__minus__11 reduce using rule 8
	tok__plus__10  reduce using rule 8
	tok__star__12  reduce using rule 8
	tok__rparen__16reduce using rule 8
	tok__lparen__15reduce using rule 8
	id             reduce using rule 8
	num            reduce using rule 8
	qq_Id          reduce using rule 8
	qq_Expr        reduce using rule 8


State 24

	Stlc -> qq_Stlc .                                   (rule 6)

	rtk__eof       reduce using rule 6
	tok_Stlc_dummy_3reduce using rule 6


State 25

	%start_parseStlc -> Stlc__top .                     (rule 0)

	%eof           accept


State 26

	Atom -> tok__lparen__15 Expr . tok__rparen__16      (rule 13)

	tok__rparen__16shift, and enter state 58


State 27

	Expr -> tok__symbol__0 Id . tok__colon__1 Ty tok__dot__2 Expr    (rule 23)

	tok__colon__1  shift, and enter state 57


State 28

	Expr -> tok_if_6 Expr . tok_then_7 Expr tok_else_8 Expr    (rule 25)

	tok_then_7     shift, and enter state 56


State 29

	Expr -> tok_let_3 Id . tok__eql__4 Expr tok_in_5 Expr    (rule 24)

	tok__eql__4    shift, and enter state 55


State 30

	Ty -> TyAtom . tok__minus__symbol__17 Ty            (rule 33)
	Ty -> TyAtom .                                      (rule 34)

	tok_Ty_dummy_0 reduce using rule 34
	tok__dot__2    reduce using rule 34
	tok__minus__symbol__17shift, and enter state 54
	tok__rparen__16reduce using rule 34


State 31

	Stlc -> tok_Ty_dummy_0 Ty . tok_Ty_dummy_0          (rule 5)

	tok_Ty_dummy_0 shift, and enter state 53


State 32

	TyAtom -> tok_Int_18 .                              (rule 30)

	tok_Ty_dummy_0 reduce using rule 30
	tok__dot__2    reduce using rule 30
	tok__minus__symbol__17reduce using rule 30
	tok__rparen__16reduce using rule 30


State 33

	TyAtom -> tok_Bool_19 .                             (rule 31)

	tok_Ty_dummy_0 reduce using rule 31
	tok__dot__2    reduce using rule 31
	tok__minus__symbol__17reduce using rule 31
	tok__rparen__16reduce using rule 31


State 34

	TyAtom -> tok__lparen__15 . Ty tok__rparen__16      (rule 32)

	tok_Int_18     shift, and enter state 32
	tok_Bool_19    shift, and enter state 33
	tok__lparen__15shift, and enter state 34
	qq_Ty          shift, and enter state 35

	TyAtom         goto state 30
	Ty             goto state 52

State 35

	TyAtom -> qq_Ty .                                   (rule 29)

	tok_Ty_dummy_0 reduce using rule 29
	tok__dot__2    reduce using rule 29
	tok__minus__symbol__17reduce using rule 29
	tok__rparen__16reduce using rule 29


State 36

	Stlc -> tok_Stlc_dummy_3 Stlc . tok_Stlc_dummy_3    (rule 2)

	tok_Stlc_dummy_3shift, and enter state 51


State 37

	Stlc -> tok_Id_dummy_1 Id . tok_Id_dummy_1          (rule 4)

	tok_Id_dummy_1 shift, and enter state 50


State 38

	Stlc -> tok_Expr_dummy_2 Expr . tok_Expr_dummy_2    (rule 3)

	tok_Expr_dummy_2shift, and enter state 49


State 39

	Eq -> Eq tok__eql__eql__9 . Add                     (rule 21)

	tok_true_13    shift, and enter state 14
	tok_false_14   shift, and enter state 17
	tok__lparen__15shift, and enter state 19
	id             shift, and enter state 20
	num            shift, and enter state 21
	qq_Id          shift, and enter state 22
	qq_Expr        shift, and enter state 23

	Atom           goto state 3
	App            goto state 4
	Mul            goto state 5
	Add            goto state 48
	Id             goto state 9

State 40

	Add -> Add tok__minus__11 . Mul                     (rule 19)

	tok_true_13    shift, and enter state 14
	tok_false_14   shift, and enter state 17
	tok__lparen__15shift, and enter state 19
	id             shift, and enter state 20
	num            shift, and enter state 21
	qq_Id          shift, and enter state 22
	qq_Expr        shift, and enter state 23

	Atom           goto state 3
	App            goto state 4
	Mul            goto state 47
	Id             goto state 9

State 41

	Add -> Add tok__plus__10 . Mul                      (rule 18)

	tok_true_13    shift, and enter state 14
	tok_false_14   shift, and enter state 17
	tok__lparen__15shift, and enter state 19
	id             shift, and enter state 20
	num            shift, and enter state 21
	qq_Id          shift, and enter state 22
	qq_Expr        shift, and enter state 23

	Atom           goto state 3
	App            goto state 4
	Mul            goto state 46
	Id             goto state 9

State 42

	Mul -> Mul tok__star__12 . App                      (rule 16)

	tok_true_13    shift, and enter state 14
	tok_false_14   shift, and enter state 17
	tok__lparen__15shift, and enter state 19
	id             shift, and enter state 20
	num            shift, and enter state 21
	qq_Id          shift, and enter state 22
	qq_Expr        shift, and enter state 23

	Atom           goto state 3
	App            goto state 45
	Id             goto state 9

State 43

	App -> App Atom .                                   (rule 14)

	rtk__eof       reduce using rule 14
	tok_Expr_dummy_2reduce using rule 14
	tok_Stlc_dummy_3reduce using rule 14
	tok_true_13    reduce using rule 14
	tok_then_7     reduce using rule 14
	tok_in_5       reduce using rule 14
	tok_false_14   reduce using rule 14
	tok_else_8     reduce using rule 14
	tok__eql__eql__9reduce using rule 14
	tok__minus__11 reduce using rule 14
	tok__plus__10  reduce using rule 14
	tok__star__12  reduce using rule 14
	tok__rparen__16reduce using rule 14
	tok__lparen__15reduce using rule 14
	id             reduce using rule 14
	num            reduce using rule 14
	qq_Id          reduce using rule 14
	qq_Expr        reduce using rule 14


State 44

	Stlc__top -> Stlc rtk__eof .                        (rule 1)

	%eof           reduce using rule 1


State 45

	App -> App . Atom                                   (rule 14)
	Mul -> Mul tok__star__12 App .                      (rule 16)

	rtk__eof       reduce using rule 16
	tok_Expr_dummy_2reduce using rule 16
	tok_Stlc_dummy_3reduce using rule 16
	tok_true_13    shift, and enter state 14
	tok_then_7     reduce using rule 16
	tok_in_5       reduce using rule 16
	tok_false_14   shift, and enter state 17
	tok_else_8     reduce using rule 16
	tok__eql__eql__9reduce using rule 16
	tok__minus__11 reduce using rule 16
	tok__plus__10  reduce using rule 16
	tok__star__12  reduce using rule 16
	tok__rparen__16reduce using rule 16
	tok__lparen__15shift, and enter state 19
	id             shift, and enter state 20
	num            shift, and enter state 21
	qq_Id          shift, and enter state 22
	qq_Expr        shift, and enter state 23

	Atom           goto state 43
	Id             goto state 9

State 46

	Mul -> Mul . tok__star__12 App                      (rule 16)
	Add -> Add tok__plus__10 Mul .                      (rule 18)

	rtk__eof       reduce using rule 18
	tok_Expr_dummy_2reduce using rule 18
	tok_Stlc_dummy_3reduce using rule 18
	tok_then_7     reduce using rule 18
	tok_in_5       reduce using rule 18
	tok_else_8     reduce using rule 18
	tok__eql__eql__9reduce using rule 18
	tok__minus__11 reduce using rule 18
	tok__plus__10  reduce using rule 18
	tok__star__12  shift, and enter state 42
	tok__rparen__16reduce using rule 18


State 47

	Mul -> Mul . tok__star__12 App                      (rule 16)
	Add -> Add tok__minus__11 Mul .                     (rule 19)

	rtk__eof       reduce using rule 19
	tok_Expr_dummy_2reduce using rule 19
	tok_Stlc_dummy_3reduce using rule 19
	tok_then_7     reduce using rule 19
	tok_in_5       reduce using rule 19
	tok_else_8     reduce using rule 19
	tok__eql__eql__9reduce using rule 19
	tok__minus__11 reduce using rule 19
	tok__plus__10  reduce using rule 19
	tok__star__12  shift, and enter state 42
	tok__rparen__16reduce using rule 19


State 48

	Add -> Add . tok__plus__10 Mul                      (rule 18)
	Add -> Add . tok__minus__11 Mul                     (rule 19)
	Eq -> Eq tok__eql__eql__9 Add .                     (rule 21)

	rtk__eof       reduce using rule 21
	tok_Expr_dummy_2reduce using rule 21
	tok_Stlc_dummy_3reduce using rule 21
	tok_then_7     reduce using rule 21
	tok_in_5       reduce using rule 21
	tok_else_8     reduce using rule 21
	tok__eql__eql__9reduce using rule 21
	tok__minus__11 shift, and enter state 40
	tok__plus__10  shift, and enter state 41
	tok__rparen__16reduce using rule 21


State 49

	Stlc -> tok_Expr_dummy_2 Expr tok_Expr_dummy_2 .    (rule 3)

	rtk__eof       reduce using rule 3
	tok_Stlc_dummy_3reduce using rule 3


State 50

	Stlc -> tok_Id_dummy_1 Id tok_Id_dummy_1 .          (rule 4)

	rtk__eof       reduce using rule 4
	tok_Stlc_dummy_3reduce using rule 4


State 51

	Stlc -> tok_Stlc_dummy_3 Stlc tok_Stlc_dummy_3 .    (rule 2)

	rtk__eof       reduce using rule 2
	tok_Stlc_dummy_3reduce using rule 2


State 52

	TyAtom -> tok__lparen__15 Ty . tok__rparen__16      (rule 32)

	tok__rparen__16shift, and enter state 63


State 53

	Stlc -> tok_Ty_dummy_0 Ty tok_Ty_dummy_0 .          (rule 5)

	rtk__eof       reduce using rule 5
	tok_Stlc_dummy_3reduce using rule 5


State 54

	Ty -> TyAtom tok__minus__symbol__17 . Ty            (rule 33)

	tok_Int_18     shift, and enter state 32
	tok_Bool_19    shift, and enter state 33
	tok__lparen__15shift, and enter state 34
	qq_Ty          shift, and enter state 35

	TyAtom         goto state 30
	Ty             goto state 62

State 55

	Expr -> tok_let_3 Id tok__eql__4 . Expr tok_in_5 Expr    (rule 24)

	tok_true_13    shift, and enter state 14
	tok_let_3      shift, and enter state 15
	tok_if_6       shift, and enter state 16
	tok_false_14   shift, and enter state 17
	tok__symbol__0 shift, and enter state 18
	tok__lparen__15shift, and enter state 19
	id             shift, and enter state 20
	num            shift, and enter state 21
	qq_Id          shift, and enter state 22
	qq_Expr        shift, and enter state 23

	Atom           goto state 3
	App            goto state 4
	Mul            goto state 5
	Add            goto state 6
	Eq             goto state 7
	Expr           goto state 61
	Id             goto state 9

State 56

	Expr -> tok_if_6 Expr tok_then_7 . Expr tok_else_8 Expr    (rule 25)

	tok_true_13    shift, and enter state 14
	tok_let_3      shift, and enter state 15
	tok_if_6       shift, and enter state 16
	tok_false_14   shift, and enter state 17
	tok__symbol__0 shift, and enter state 18
	tok__lparen__15shift, and enter state 19
	id             shift, and enter state 20
	num            shift, and enter state 21
	qq_Id          shift, and enter state 22
	qq_Expr        shift, and enter state 23

	Atom           goto state 3
	App            goto state 4
	Mul            goto state 5
	Add            goto state 6
	Eq             goto state 7
	Expr           goto state 60
	Id             goto state 9

State 57

	Expr -> tok__symbol__0 Id tok__colon__1 . Ty tok__dot__2 Expr    (rule 23)

	tok_Int_18     shift, and enter state 32
	tok_Bool_19    shift, and enter state 33
	tok__lparen__15shift, and enter state 34
	qq_Ty          shift, and enter state 35

	TyAtom         goto state 30
	Ty             goto state 59

State 58

	Atom -> tok__lparen__15 Expr tok__rparen__16 .      (rule 13)

	rtk__eof       reduce using rule 13
	tok_Expr_dummy_2reduce using rule 13
	tok_Stlc_dummy_3reduce using rule 13
	tok_true_13    reduce using rule 13
	tok_then_7     reduce using rule 13
	tok_in_5       reduce using rule 13
	tok_false_14   reduce using rule 13
	tok_else_8     reduce using rule 13
	tok__eql__eql__9reduce using rule 13
	tok__minus__11 reduce using rule 13
	tok__plus__10  reduce using rule 13
	tok__star__12  reduce using rule 13
	tok__rparen__16reduce using rule 13
	tok__lparen__15reduce using rule 13
	id             reduce using rule 13
	num            reduce using rule 13
	qq_Id          reduce using rule 13
	qq_Expr        reduce using rule 13


State 59

	Expr -> tok__symbol__0 Id tok__colon__1 Ty . tok__dot__2 Expr    (rule 23)

	tok__dot__2    shift, and enter state 66


State 60

	Expr -> tok_if_6 Expr tok_then_7 Expr . tok_else_8 Expr    (rule 25)

	tok_else_8     shift, and enter state 65


State 61

	Expr -> tok_let_3 Id tok__eql__4 Expr . tok_in_5 Expr    (rule 24)

	tok_in_5       shift, and enter state 64


State 62

	Ty -> TyAtom tok__minus__symbol__17 Ty .            (rule 33)

	tok_Ty_dummy_0 reduce using rule 33
	tok__dot__2    reduce using rule 33
	tok__rparen__16reduce using rule 33


State 63

	TyAtom -> tok__lparen__15 Ty tok__rparen__16 .      (rule 32)

	tok_Ty_dummy_0 reduce using rule 32
	tok__dot__2    reduce using rule 32
	tok__minus__symbol__17reduce using rule 32
	tok__rparen__16reduce using rule 32


State 64

	Expr -> tok_let_3 Id tok__eql__4 Expr tok_in_5 . Expr    (rule 24)
